--- a/configs/rtdetrv2/rtdetrv2_r101vd_6x_coco.yml
+++ b/configs/rtdetrv2/rtdetrv2_r101vd_6x_coco.yml
@@ -1,12 +1,13 @@
-_BASE_: [
-  '../datasets/coco_detection.yml',
-  '../runtime.yml',
-  '_base_/optimizer_6x.yml',
-  '_base_/rtdetrv2_r50vd.yml',
-  '_base_/rtdetrv2_reader.yml',
-]
+_BASE_:
+  [
+    "../datasets/coco_detection.yml",
+    "../runtime.yml",
+    "_base_/optimizer_6x.yml",
+    "_base_/rtdetrv2_r50vd.yml",
+    "_base_/rtdetrv2_reader.yml",
+  ]
 
-weights: output/rtdetrv2_r101vd_6x_coco/model_final
+# weights: output/rtdetrv2_r101vd_6x_coco/model_final
 find_unused_parameters: True
 log_iter: 200
 
@@ -23,16 +24,15 @@ HybridEncoder:
     nhead: 8
     dim_feedforward: 2048
     dropout: 0.
-    activation: 'gelu'
+    activation: "gelu"
   expansion: 1.0
-
 
 OptimizerBuilder:
   optimizer:
     type: AdamW
     weight_decay: 0.0001
     param_groups:
-      - params: ['^(?=.*backbone)(?!.*norm).*$']
+      - params: ["^(?=.*backbone)(?!.*norm).*$"]
         learning_rate: 0.000001
-      - params: ['^(?=.*(?:neck|transformer))(?=.*(?:norm|bn)).*$']
+      - params: ["^(?=.*(?:neck|transformer))(?=.*(?:norm|bn)).*$"]
         weight_decay: 0.
