--- a/configs/rtdetr/rtdetr_lcnet_x0_35_6x_coco.yml
+++ b/configs/rtdetr/rtdetr_lcnet_x0_35_6x_coco.yml
@@ -9,7 +9,7 @@ _BASE_:
 
 # weights: output/rtdetr_hgnetv2_l_6x_coco/model_final
 weights: /content/PPLCNet_x0_35_pretrained.pdparams
-# pretrain_weights: https://bj.bcebos.com/v1/paddledet/models/pretrained/PPHGNetV2_L_ssld_pretrained.pdparams
+pretrain_weights: https://bj.bcebos.com/v1/paddledet/models/pretrained/PPHGNetV2_L_ssld_pretrained.pdparams
 find_unused_parameters: True
 log_iter: 200
 
@@ -18,5 +18,5 @@ DETR:
 
 LCNet:
   scale: 0.35
-  pretrained: true
+  pretrained: false
   return_idx: [1, 2, 3]
